cors and swagger setted
