# swagger-output.json
@@ -5,10 +5,10 @@
     "description": "API documentation for the Pet Store project",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "cse341-project2-wok4.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/": {
